# tiger

./: .gitignore  LICENSE  README.md  tiger.cabal
src/: AST.hs  Alloc.hs  BinopPrecedence.hs  Builtins.hs  Environment.hs  Eval.hs  Frame.hs  FrameExp.hs  Parse.hs  Semantics.hs  Straightline.hs  Symbol.hs  Temporary.hs  TigerTypes.hs  Translate.hs  Translation.hs  Types.hs  Typing.hs
test/: AllocSpec.hs  BinopPrecedenceSpec.hs  EnvironmentSpec.hs  EvalSpec.hs  FrameSpec.hs  ParseSpec.hs  StraightlineSpec.hs  SymbolSpec.hs  TemporarySpec.hs  TranslateSpec.hs  TypingExampleSpec.hs  TypingSpec.hs
