name:                tiger
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/shterrett/tiger#readme
license:             MIT
license-file:        LICENSE
author:              Stuart Terrett
maintainer:          shterrett@gmail.com
copyright:           Copyright 2017 Stuart Terrett
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Straightline
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable tiger-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , tiger
  default-language:    Haskell2010

test-suite tiger-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , tiger
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/shterrett/tiger
